--- a/Gunstoreshoppingcart/Gunstoreshoppingcart/Gunstoreshoppingcart.csproj
+++ b/Gunstoreshoppingcart/Gunstoreshoppingcart/Gunstoreshoppingcart.csproj
@@ -7,6 +7,9 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Repositories\" />
+    <Folder Include="Repositories\Implementation\" />
+    <Folder Include="Exceptions\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Models\CakeDTO.cs" />
